# Rander

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  matrix.cpp  matrix.hpp
